--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,32 @@
-/* .App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+ 
+:root {
+  --primary-white: #fff;
+}
+/************************* NAVBAR ***********************/
+body {
+  font-family: "Roboto Condesed", sans-serif;
+}
+.logo {
+  width: 7.5rem;
+}
+/************MENU*************/
+ 
+nav a.nav-link {
+  /* font-weight: 500; */
+  /* letter-spacing: 0.0375px; */
+  cursor: pointer;
+}
+nav ul li {
+  text-transform: uppercase;
+}
+ 
+.navbar-nav > li > a{
+  color: var(--primary-white) !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* -----------------NAVBAR------------------ */
-
-.logo{
-  width: 120px;
+.navbar-nav  > li > a{
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  color: var(--primary-white) !important;
 }
