--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,9 @@ nav ul li {
   text-align: center;
   font-family: "Roboto Condesed",sans-serif;
 }
+
+
+.textFont{
+  font-size: 20px;
+  font-family: "Roboto condesed",sans-serif;
+}
