--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,9 @@ nav ul li {
 /* ---------------------Header------------------------ */
 .header-wrapper{
   position: relative;
-  background: url(web_bg.png) no-repeat;
+  /* background: url(web_bg.png) no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   height: 90vh;
 }
 .main-info{
@@ -76,13 +76,25 @@ nav ul li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
   align-items: center;
   text-align: center;
   font-family: "Roboto Condesed",sans-serif;
 }
-
+HeaderTask
 
 .textFont{
   font-size: 20px;
   font-family: "Roboto condesed",sans-serif;
+}
+
+canvas {
+  background: url(web_bg.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
 }
