--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ HeaderTask
 }
 
 canvas {
-  background: url(web_bg.png) no-repeat;
+  background: url(web_bg2.png) no-repeat;
   background-size: cover;
   background-position: center;
   height: 90vh;
