--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,11 @@ nav ul li {
   background-position: center; */
   height: 90vh;
 }
+.header-wrapper .HeaderTask > h1 {
+  color: var(--primary-white);
+  font-size: 4em;
+  text-transform : uppercase;
+  }
 .main-info{
   display: flex;
   flex-direction: column;
@@ -102,4 +107,24 @@ canvas {
 .card-img-top{
   height: 50vh;
   width: 50vh;
+}
+
+.banner-section{
+  padding:80px;
+  min-height: 60px;
+  background-color: rgb(76, 235, 118);
+  border-radius :10%;
+}
+.banner-about{
+  padding:80px;
+  min-height: 60px;
+  background-color: rgb(124, 255, 174);
+  border-radius :10%;
+}
+
+.typed-name{
+  font-size: 3rem;
+  color: var(--primary-white);
+  border: 1px solid white;
+  display: inline-block;
 }
