--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,6 @@ nav ul li {
   text-align: center;
   font-family: "Roboto Condesed",sans-serif;
 }
-
 .main-info h1{
   color: var(--primary-dark);
   text-transform: uppercase;
@@ -116,7 +115,8 @@ canvas {
   border-radius :10%;
 }
 .banner-about{
-  padding:80px;
+  padding: 10px 10px 10px 10px;
+  /* padding: 80px; */
   min-height: 60px;
   background-color: rgb(77, 185, 118);
   border-radius :10%;
