--- a/src/footer.css
+++ b/src/footer.css
@@ -6,4 +6,7 @@
     justify-content: center;
     align-self: center;
     position: relative;
+    color: white;
+    text-align: left;
+    padding-left:200px ;
 }
