--- a/src/footer.css
+++ b/src/footer.css
@@ -10,3 +10,13 @@
     text-align: left;
     padding-left:200px ;
 }
+.icon {
+    width: 5vh; 
+    font-size: 45px;
+    cursor: pointer;
+}
+.icon > a {
+    color: white;
+
+}
+
