--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ canvas {
   /* padding: 80px; */
   min-height: 60px;
   background-color: rgb(77, 185, 118);
-  border-radius :10%;
+  /* border-radius :10%; */
 }
 /* ---------------------- */
 .banner-about ul{
