--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
- 
+
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
-  --primary-dark: rgb(0,0,0);
-  --primary-white-gray: #f5f3f3 ;
-  --primary-gray :  #7f7f7f ;
+  --primary-dark: rgb(0, 0, 0);
+  --primary-white-gray: #f5f3f3;
+  --primary-gray: #7f7f7f;
 }
+
 /************************* NAVBAR ***********************/
 
-.body-content{
+.body-content {
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -22,84 +23,93 @@ body {
 .logo {
   width: 7.5rem;
 }
+
 /************MENU*************/
- 
+
 nav a.nav-link {
   /* font-weight: 500; */
   /* letter-spacing: 0.0375px; */
   cursor: pointer;
 }
+
 nav ul li {
   text-transform: uppercase;
 }
- 
-.navbar-nav > li > a{
+
+.navbar-nav>li>a {
   color: var(--primary-white) !important;
 }
 
-.navbar-nav  > li > a{
+.navbar-nav>li>a {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
   color: var(--primary-white) !important;
   border-top: 00.1875rem solid var(--primary-dark);
 }
-.navbar-brand{
+
+.navbar-brand {
   max-width: 20.25rem;
   padding: 0 !important;
   height: 10rem !important;
 }
 
-.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
+.navbar-nav>li>a.active,
+.navbar-nav>li>a:focus {
   border-top: 0.1875rem solid var(--primary-orange);
 }
-.navbar-nav > li > a:hover{
+
+.navbar-nav>li>a:hover {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
 /* ---------------------Header------------------------ */
-.header-wrapper{
+.header-wrapper {
   position: relative;
   /* background: url(web_bg.png) no-repeat;
   background-size: cover;
   background-position: center; */
   height: 90vh;
 }
-.header-wrapper .HeaderTask > h1 {
+
+.header-wrapper .HeaderTask>h1 {
   color: var(--primary-white);
   font-size: 4em;
-  text-transform : uppercase;
-  }
-.main-info{
+  text-transform: uppercase;
+}
+
+.main-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Roboto Condesed",sans-serif;
+  font-family: "Roboto Condesed", sans-serif;
 }
-.main-info h1{
+
+.main-info h1 {
   color: var(--primary-dark);
   text-transform: uppercase;
 }
-.typed-text{
+
+.typed-text {
   font-size: 2rem;
   color: var(--primary-white);
 }
 
-.HeaderTask{
+.HeaderTask {
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
   align-items: center;
   text-align: center;
-  font-family: "Roboto Condesed",sans-serif;
+  font-family: "Roboto Condesed", sans-serif;
 }
 
 
-.textFont{
+.textFont {
   font-size: 20px;
-  font-family: "Roboto condesed",sans-serif;
+  font-family: "Roboto condesed", sans-serif;
 }
 
 canvas {
@@ -113,42 +123,45 @@ canvas {
   z-index: 1;
 }
 
-.card-img-top{
+.card-img-top {
   height: 50vh;
   width: 50vh;
 }
 
-.banner-section{
-  padding:80px;
+.banner-section {
+  padding: 80px;
   min-height: 60px;
-  background-color: var(--primary-gray); 
-  border-radius :10%;
+  background-color: var(--primary-gray);
+  border-radius: 10%;
 }
-.banner-about{
+
+.banner-about {
   padding: 10px 10px 10px 10px;
   /* padding: 80px; */
   min-height: 60px;
   background-color: var(--primary-white-gray);
-  border-radius :3%;
+  border-radius: 3%;
 }
+
 /* ---------------------- */
-.banner-about ul{
+.banner-about ul {
   text-align: left;
 }
+
 /* ---------------------- */
 
-.typed-name{
+.typed-name {
   font-size: 3rem;
   color: var(--primary-white);
   border: 1px solid white;
   display: inline-block;
 }
 
-.carousel .carousel-indicators > li {
-  background-color :rgb(255, 255, 255);
+.carousel .carousel-indicators>li {
+  background-color: rgb(255, 255, 255);
 }
 
-.carousel .carousel-indicators > li.active{
+.carousel .carousel-indicators>li.active {
   background-color: rgb(122, 122, 122);
 }
 
@@ -159,16 +172,16 @@ canvas {
   color: var(--primary-dark) !important
 }
 
-svg > polygon {
+svg>polygon {
   fill: white;
 }
 
-.nav-color{
+.nav-color {
   background-color: #2d2d2d;
 }
 
-.carousel-inner > .card-inner {
-  width:950px !important;
+.carousel-inner>.card-inner {
+  width: 950px !important;
   max-height: 100%;
 
 }
