--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ canvas {
 .banner-section {
   padding: 80px;
   min-height: 60px;
-  background-color: var(--primary-gray);
+  background-color: var(--primary-white-gray);
   border-radius: 10%;
 }
 
@@ -152,7 +152,7 @@ canvas {
 
 .typed-name {
   font-size: 3rem;
-  color: var(--primary-white);
+  color: var(--primary-dark);
   border: 1px solid white;
   display: inline-block;
 }
