--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,7 @@ canvas {
 .followMeBar {
   text-align: center;
   text-indent: 50px;
+  margin: 0px;
 }
 
 
@@ -225,4 +226,30 @@ html{
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+
+.inner img {
+  transition: all 5s ease;
+}
+
+.inner:hover {
+  transform: scale(1.5);
+}
+/* barchart */
+.rechart {
+  width: auto;
+  height: 400px;
+}
+.rechart-container{
+  width: 100%;
+  height: 100%;
+}
+/* circle */
+.rechart-circle {
+  width: auto;
+  height: 50px;
+}
+.rechart-container-circle{
+  width: 100%;
+  height: 50%;
 }
