--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --primary-orange: #f9ab00;
   --primary-dark: rgb(0, 0, 0);
   --primary-white-gray: #f5f3f3;
-  --primary-gray: #bebebe;
+  --primary-gray: #e9e9e9;
 }
 
 /************************* NAVBAR ***********************/
@@ -140,6 +140,7 @@ canvas {
   background-color: var(--primary-white);
   border-radius: 10%;
   font-family: 'Roboto Mono', monospace;
+  border: 2px solid rgb(160, 160, 160);
 }
 
 .banner-about {
@@ -149,6 +150,7 @@ canvas {
   background-color: var(--primary-white);
   border-radius: 2%;
   font-family: 'Roboto Mono', monospace;
+  border: 2px solid rgb(188, 188, 188);
 }
 
 .banner-gray {
@@ -158,6 +160,7 @@ canvas {
   background-color: var(--primary-gray);
   border-radius: 2%;
   font-family: 'Roboto Mono', monospace;
+  border: 2px solid rgb(160, 160, 160);
 }
 
 /* ---------------------- */
@@ -271,4 +274,8 @@ html{
 .rechart-container-circle{
   width: 100%;
   height: 50%;
+}
+
+.frame-cover{
+  border: 2px solid #2d2d2d;
 }
